修改主页，增加登出功能

--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "pages":[
     "pages/login/login",
+    "pages/main/main",
     "pages/yuyueck/yuyueck",
     "pages/index/index",
    "pages/xxinfo/xxinfo",
