--- a/app.json
+++ b/app.json
@@ -1,27 +1,29 @@
 {
-  "pages":[
-    "pages/login/login",
-    "pages/main/main",
-    "pages/yuyueck/yuyueck",
-    "pages/index/index",
-   "pages/xxinfo/xxinfo",
-   "pages/xxlb/xxlb",
-    "pages/hdqd/hdqd",
-    "pages/hdbm/hdbm",
-    "pages/hddw/hddw",
-    "pages/xfmx/xfmx",
-    "pages/xfshInfo/xfshInfo",
-    "pages/xfsh/xfsh",
-    "pages/hdshInfo/hdshInfo",
-    "pages/hdsh/hdsh",
-    "pages/sh/sh",
-    "pages/apply_xfList/apply_xfList",
-    "pages/xfsqck/xfsqck"
-  ],
-  "window":{
-    "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
-  }
+ "pages": [
+  "pages/login/login",
+  "pages/stu_hdList/stu_hdList",
+  "pages/plshenhe/plshenhe",
+  "pages/main/main",
+  "pages/yuyueck/yuyueck",
+  "pages/index/index",
+  "pages/xxinfo/xxinfo",
+  "pages/xxlb/xxlb",
+  "pages/hdqd/hdqd",
+  "pages/hdbm/hdbm",
+  "pages/hddw/hddw",
+  "pages/xfmx/xfmx",
+  "pages/xfshInfo/xfshInfo",
+  "pages/xfsh/xfsh",
+  "pages/hdshInfo/hdshInfo",
+  "pages/hdsh/hdsh",
+  "pages/sh/sh",
+  "pages/apply_xfList/apply_xfList",
+  "pages/xfsqck/xfsqck"
+ ],
+ "window": {
+  "backgroundTextStyle": "light",
+  "navigationBarBackgroundColor": "#fff",
+  "navigationBarTitleText": "WeChat",
+  "navigationBarTextStyle": "black"
+ }
 }
